# alphagateau-breakthrough-v2

./: .gitignore  README.md  RUN_GUIDE.md  RUN_GUIDE_CUSTOM.md  pixi.toml  pyproject.toml  requirements.txt
artifacts/experiments/: gnn_transfer_summary.json  gnn_transfer_summary_part1.json  (+8 more)
notebooks/: README.md  demo.ipynb
presentation/: README.md  index.html  package.json  pnpm-lock.yaml  slides.md  speaker_notes.md
report/: README.md  neurips_2023.sty  paper.bbl  paper.blg  paper.md  paper.out  paper.tex  references.bib
scripts/: bootstrap_mimi_shell.sh  evaluate_models.py  mimi_bootstrap_shared_env.sh  mimi_collect_outputs.sh  mimi_dry_run.sh  mimi_full_dag.sh  mimi_full_validation.sh  mimi_project.sh  mimi_queue.sh  mimi_runtime_check.sh  mimi_smoke_dag.sh  plot_catastrophic_forgetting.py  plot_scratch_comparison.py  plot_submission_figures.py  postprocess_experiments.py  run_extended_transfer_pipeline.py  run_extended_transfer_pipeline_p1.py  run_extended_transfer_pipeline_p2.py  run_smoke_suite.py  run_transfer_pipeline.py  setup_mimi_env.sh  show_runtime_info.py  submit_mimi_pipeline.py  train_experiment.py  train_td_experiment.py  zip_training_bundle.py
slurm/: extended_transfer_pipeline.sbatch  extended_transfer_stage_p1.sbatch  extended_transfer_stage_p2.sbatch  h2h.sbatch  postprocess.sbatch  train_experiment.sbatch  train_td_experiment.sbatch  transfer_stage.sbatch
tests/: test_env.py  test_graph.py  test_mimi_wrappers.py  test_plotting.py  test_smoke_pipeline.py  test_submit_mimi_pipeline.py  test_training_resume.py  test_transfer_pipeline.py
(+287 files in other folders)
