[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphagateau-breakthrough"
version = "0.1.0"
description = "AlphaGateau-style Breakthrough training and evaluation pipeline."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Athmane Benarous" },
  { name = "Farooq Khan" },
  { name = "Andrew Saffar" }
]
dependencies = [
  "jax>=0.4.25",
  "jaxlib>=0.4.25",
  "chex>=0.1.85",
  "flax>=0.8.1",
  "optax>=0.1.9",
  "jraph>=0.0.6.dev0",
  "mctx>=0.0.5",
  "numpy>=1.26",
  "scipy>=1.11",
  "packaging>=24.0",
  "matplotlib>=3.8",
  "rich>=13.7",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
